logs/reminder-cron.log
node:internal/modules/cjs/loader:1368
  throw err;
  ^

Error: Cannot find module 'dotenv'
Require stack:
- e:\Heet\B2B\scripts\run-reminders.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1365:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1021:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1026:22)
    at Function._load (node:internal/modules/cjs/loader:1175:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1445:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (e:\Heet\B2B\scripts\run-reminders.js:1:1)
    at Module._compile (node:internal/modules/cjs/loader:1688:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ 'e:\\Heet\\B2B\\scripts\\run-reminders.js' ]
}

Node.js v22.18.0
Triggering auto reminders at http://localhost:3000/api/reminders/auto...
Status: 200
Result: {
  "scanned": 0,
  "sentCount": 0,
  "skippedCount": 0,
  "failedCount": 0,
  "failures": []
}
Triggering auto reminders at http://localhost:3000/api/reminders/auto...
Error triggering reminders: TypeError: fetch failed
    at node:internal/deps/undici/undici:13510:13
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async triggerReminders (e:\Heet\B2B\scripts\run-reminders.js:16:26) {
  [cause]: AggregateError [ECONNREFUSED]: 
      at internalConnectMultiple (node:net:1134:18)
      at afterConnectMultiple (node:net:1715:7) {
    code: 'ECONNREFUSED',
    [errors]: [ [Error], [Error] ]
  }
}
Triggering auto reminders at http://localhost:3000/api/reminders/auto...
Attempt 1/3 failed: fetch failed
Cause code: ECONNREFUSED
^CTriggering auto reminders at http://localhost:3000/api/reminders/auto...
Attempt 1/3 failed: fetch failed
Cause code: ECONNREFUSED
Attempt 2/3 failed: fetch failed
Cause code: ECONNREFUSED
Attempt 3/3 failed: fetch failed
Cause code: ECONNREFUSED
Could not connect to localhost. Ensure the Next.js app is running, or set REMINDER_TARGET_URL/SITE_URL to your live domain.
Triggering auto reminders at http://localhost:3000/api/reminders/auto...
Attempt 1/3 failed: fetch failed
Cause code: ECONNREFUSED
Attempt 2/3 failed: fetch failed
Cause code: ECONNREFUSED
Attempt 3/3 failed: fetch failed
Cause code: ECONNREFUSED
Could not connect to localhost. Ensure the Next.js app is running, or set REMINDER_TARGET_URL/SITE_URL to your live domain.
